# bics-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/api/: server.py
apps/codebug_bot/: gui.py  local_model.py
apps/frontend/: package.json
apps/frontend/src/: App.jsx
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: index.css
src/: server.py
src/codebug_bot/: __init__.py  analyzer.py  chatbot.py  local_model.py
tests/: test_analyzer.py
