[project]
name = "bics-chatbot"
version = "0.1.0"
description = "Chatbot para apontar defeitos em trechos de código Python e sugerir correções rápidas."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
